# module-robot

./: .gitignore  ARCHITECTURE.md  AUTONOMY_MASTER.md  AUTOPILOT_TEST_REPORT_2026-05-09.md  CODEX_START_HERE.md  CODEX_TASKS.md  DECISIONS.md  EKF_FLASH.md  HARDWARE.md  HITL_HANDOFF.md  IMPLEMENTATION_STATUS.md  MEMORY.md  PLAN.md  PROTOCOL.md  README.md  ROADMAP.md  RTK_CURRENT_STATE.md  RTK_REBUILD_PLAN.md  SAFETY.md  TEST_LOG.md  WORKLOG.md  calib_imu.py  check_serial.ps1  drive_auto.py  drive_phase.py  drive_sync.py  drive_sync2.py  drive_sync3.py  kill_ps.ps1  listen8.ps1  listen_com4_rover.ps1  listen_com7.ps1  listen_long.ps1  listen_trace.ps1  peek_com7.ps1  platformio.ini  read_com7.ps1  read_com7_5s.ps1  read_com7_long.ps1  reset_com7.ps1  (+40 more)
.github/workflows/: build-ios-ipa.yml
docs/: imu_bno085_heading.md
docs/ai_skills/: README.md  demo_grant.md  esp32.md  flutter.md  gps_rtk.md  manual_mode.md  mapping_route.md  memory_maintenance.md  project_overview.md  protocol.md  safety.md  testing.md
firmware/: config.h  firmware.ino  gps.cpp  gps.h  imu.cpp  imu.h  motors.cpp  motors.h  nav.cpp  nav.h  sound.cpp  sound.h  telemetry.cpp  telemetry.h  websocket.cpp  websocket.h
ipa apps/: README.md
module_app/: pubspec.yaml
module_app/lib/: main.dart
module_app/test/: cleaning_route_planner_stress_test.dart  cleaning_route_planner_test.dart  gps_debug_map_points_test.dart  gps_display_math_test.dart  gps_navigation_test.dart  gps_perimeter_storage_test.dart  map_origin_navigation_test.dart  nav_run_tracker_test.dart
module_app/tool/: hitl_10x10_three_forbid_export_test.dart  hitl_10x12_branch_15m_zone_10x10_export_test.dart  hitl_10x12_three_small_forbid_export_test.dart  hitl_snake_route_export_test.dart  stress_route_export_test.dart  transition_route_export_test.dart
navigation_core/: CMakeLists.txt  NavigationCore.h  demo_random_nav.cpp  nav_test_standalone.cpp  pio_native_toolchain.py  platformio.ini  test_nav.py  test_navigation.cpp
navigation_core/test/test_motor_command_guard/: test_motor_command_guard.cpp
navigation_core/test/test_motor_command_math/: test_motor_command_math.cpp
navigation_core/test/test_navigation_core/: test_navigation_core.cpp
navigation_core/test/test_pvt_safety_timeline/: test_pvt_safety_timeline.cpp
navigation_core/test/test_route_diagnostics/: test_route_diagnostics.cpp
navigation_core/test/test_route_executor/: test_route_executor.cpp
robot_pi/: .gitattributes  ACCEPTANCE_TESTS.md  FIRST_BOOT.md  MIGRATION_PLAN.md  README.md  TROUBLESHOOTING.md  WIRING.md  requirements.txt
robot_pi/config/: network.yaml  robot_dimensions.yaml  safety.yaml  serial.yaml  velocity_limits.yaml
robot_pi/ros2_ws/src/module_robot_bringup/: README.md  package.xml  setup.cfg  setup.py
robot_pi/ros2_ws/src/module_robot_bringup/launch/: autonomous_bringup.launch.py  manual_bringup.launch.py
robot_pi/ros2_ws/src/module_robot_bringup/module_robot_bringup/: __init__.py  preflight.py
robot_pi/ros2_ws/src/module_robot_bringup/test/: test_preflight.py
robot_pi/ros2_ws/src/module_robot_description/: CMakeLists.txt  package.xml
robot_pi/ros2_ws/src/module_robot_description/config/: robot_dimensions.yaml
robot_pi/ros2_ws/src/module_robot_description/launch/: description.launch.py
robot_pi/ros2_ws/src/module_robot_description/urdf/: module_robot.urdf.xacro
robot_pi/ros2_ws/src/module_robot_esp32_bridge/: README.md  package.xml  setup.cfg  setup.py
robot_pi/ros2_ws/src/module_robot_esp32_bridge/config/: bridge.yaml
robot_pi/ros2_ws/src/module_robot_esp32_bridge/launch/: bridge.launch.py
robot_pi/ros2_ws/src/module_robot_esp32_bridge/module_robot_esp32_bridge/: __init__.py  bridge_node.py  bridge_state.py  payloads.py  protocol.py
robot_pi/ros2_ws/src/module_robot_esp32_bridge/test/: test_bridge_state.py  test_payloads.py  test_protocol.py
robot_pi/ros2_ws/src/module_robot_localization/: package.xml  setup.cfg  setup.py
robot_pi/ros2_ws/src/module_robot_localization/config/: ekf_global.yaml  ekf_local.yaml  heading_initializer.yaml  navsat_transform.yaml
robot_pi/ros2_ws/src/module_robot_localization/launch/: heading_initializer.launch.py  localization_templates.launch.py
robot_pi/ros2_ws/src/module_robot_localization/module_robot_localization/: __init__.py  heading_initializer.py
robot_pi/ros2_ws/src/module_robot_localization/test/: test_heading_math.py
robot_pi/ros2_ws/src/module_robot_msgs/: CMakeLists.txt  package.xml
robot_pi/ros2_ws/src/module_robot_msgs/msg/: FaultEvent.msg  MotorStatus.msg  PowerStatus.msg  ProtocolStats.msg  RelayStatus.msg  RobotStatus.msg  RtkStatus.msg  SafetyState.msg
robot_pi/ros2_ws/src/module_robot_msgs/srv/: Arm.srv  ResetFault.srv  SetControlMode.srv  SetRelays.srv
robot_pi/ros2_ws/src/module_robot_navigation/: CMakeLists.txt  README.md  package.xml
robot_pi/ros2_ws/src/module_robot_navigation/config/: nav2_follow_path.yaml  rotation_shim_optional.yaml
robot_pi/ros2_ws/src/module_robot_navigation/launch/: follow_path.launch.py
robot_pi/ros2_ws/src/module_robot_safety/: package.xml  setup.cfg  setup.py
robot_pi/ros2_ws/src/module_robot_safety/config/: safety.yaml
robot_pi/ros2_ws/src/module_robot_safety/launch/: safety.launch.py
robot_pi/ros2_ws/src/module_robot_safety/module_robot_safety/: __init__.py  policy.py  safety_node.py
robot_pi/ros2_ws/src/module_robot_safety/test/: test_policy.py
robot_pi/scripts/: build_workspace.sh  configure_pi.sh  diagnostics.sh  first_boot_check.sh  install_pi.sh  manual_drive_test.sh  monitor_lifted_pulse.py  pre_arm_hardware_probe.sh  read_telemetry_sample.py  (+4 more)
rtk_firmware/: README.md  platformio.ini
simulator/: README.md  __init__.py  analyze_snake_trace.py  analyze_stress_hitl.py  auto_test.py  ekf_test.py  gps_emulator.py  hitl_param_test.py  hitl_runner.py  hitl_tune.py  nav_debug.py  physics.py  render_stress_hitl_overview.py  render_stress_routes.py  render_transition_route.py  requirements.txt  run_nav_demo.ps1  run_nav_view.ps1  run_stress_hitl.py  serial_emulator.py  simulator.py
sound/: platformio.ini  sound.ino
(+111 files in other folders)
