<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>module_robot_bringup</name>
  <version>0.1.0</version>
  <description>Fail-closed manual and opt-in autonomous launch orchestration.</description>
  <maintainer email="robot@localhost">Module Robot Maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>module_robot_description</exec_depend>
  <exec_depend>module_robot_esp32_bridge</exec_depend>
  <exec_depend>module_robot_gateway</exec_depend>
  <exec_depend>module_robot_localization</exec_depend>
  <exec_depend>module_robot_navigation</exec_depend>
  <exec_depend>module_robot_safety</exec_depend>
  <exec_depend>module_robot_tools</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
