<?xml version="1.0"?>
<package format="3">
  <name>module_robot_esp32_bridge</name>
  <version>0.1.0</version>
  <description>Fail-safe COBS/CRC serial bridge between ROS 2 and the Module robot ESP32.</description>
  <maintainer email="robot@localhost">Module Robot Team</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>module_robot_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <test_depend>ament_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
